--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://<your-github-username>.github.io/<kripal-krishna-singh-bio>",
+  "homepage": "https://kripal004.github.io/kripal-krishna-singh-bio",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
